# ideapad5_14are05_energy_plasmoid

./: CMakeLists.txt  README.md
icons/: CMakeLists.txt
plasmoid/: metadata.desktop
plasmoid/contents/ui/: main.qml
